--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,16 +1,15 @@
 .DS_Store
-node_modules/
-/dist/
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-{{#unit}}
-/test/unit/coverage/
-{{/unit}}
-{{#e2e}}
-/test/e2e/reports/
-selenium-debug.log
-{{/e2e}}
 
 # Editor directories and files
 .idea
@@ -19,3 +18,4 @@ selenium-debug.log
 *.ntvs*
 *.njsproj
 *.sln
+*.sw*
