--- a/package.json
+++ b/package.json
@@ -25,11 +25,21 @@
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.8.0",
+    "cssnano": "^4.1.10",
+    "cssnano-preset-advanced": "^4.0.7",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "postcss-aspect-ratio-mini": "^1.0.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.5.0",
+    "postcss-px-to-viewport": "^1.1.0",
+    "postcss-url": "^8.0.0",
+    "postcss-viewport-units": "^0.1.6",
+    "postcss-write-svg": "^3.0.1",
     "size-plugin": "^1.1.2",
     "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-iview": "^1.0.6",
