--- a/template/package.json
+++ b/template/package.json
@@ -43,7 +43,7 @@
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
     "cssnano": "^4.1.10",
-    "cssnano-preset-advanced": "^4.0.7",
+    "cssnano-preset-advanced": "^4.0.7"
     {{/isMobile}}
   }
 }
