--- a/template/package.json
+++ b/template/package.json
@@ -33,7 +33,7 @@
     "size-plugin": "^1.1.2",
     "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-iview": "^1.0.6",
-    "vue-template-compiler": "^2.5.21",{{#isMobile}}
+    "vue-template-compiler": "^2.5.21"{{#isMobile}},
     "postcss-aspect-ratio-mini": "^1.0.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
