--- a/template/package.json
+++ b/template/package.json
@@ -11,14 +11,32 @@
     "analyz": "NODE_ENV=production  npm_config_report=true npm run build"
   },
   "dependencies": {
-    "axios": "^0.18.0",{{#iview}}
-    "iview": "^3.0.1",{{/iview}}
-    "js-cookie": "^2.2.0",
-    "vue": "^2.6.6",{{#router}}
-    "vue-router": "^3.0.1",{{/router}}{{#vuex}}
-    "vuex": "^3.0.1"{{/vuex}}
+    "axios": "^0.18.0",
+    {{#iview}}
+    "iview": "^3.0.1",
+    {{/iview}}
+    "vue": "^2.6.6",
+    {{#router}}
+    "vue-router": "^3.0.1",
+    {{/router}}
+    {{#vuex}}
+    "vuex": "^3.0.1",
+    {{/vuex}}
+    "js-cookie": "^2.2.0"
   },
   "devDependencies": {
+    {{#isMobile}}
+    "postcss-aspect-ratio-mini": "^1.0.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.5.0",
+    "postcss-px-to-viewport": "^1.1.0",
+    "postcss-url": "^8.0.0",
+    "postcss-viewport-units": "^0.1.6",
+    "postcss-write-svg": "^3.0.1",
+    "cssnano": "^4.1.10",
+    "cssnano-preset-advanced": "^4.0.7",
+    {{/isMobile}}
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
@@ -33,17 +51,6 @@
     "size-plugin": "^1.1.2",
     "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-iview": "^1.0.6",
-    "vue-template-compiler": "^2.5.21"{{#isMobile}},
-    "postcss-aspect-ratio-mini": "^1.0.1",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.5.0",
-    "postcss-px-to-viewport": "^1.1.0",
-    "postcss-url": "^8.0.0",
-    "postcss-viewport-units": "^0.1.6",
-    "postcss-write-svg": "^3.0.1",
-    "cssnano": "^4.1.10",
-    "cssnano-preset-advanced": "^4.0.7"
-    {{/isMobile}}
+    "vue-template-compiler": "^2.5.21"
   }
 }
