--- a/template/package.json
+++ b/template/package.json
@@ -2,6 +2,7 @@
   "name": "vue-cli3-pc-template",
   "version": "0.1.0",
   "private": true,
+  "author": "softlink",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
